[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "optimode"
version = "0.1.0"
description = "Python interface to OptiMode.jl: differentiable electromagnetic waveguide eigenmode solving"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Dodd Gray" }]
dependencies = [
    "juliacall>=0.9.20",
    "numpy>=1.22",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["optimode*"]
